crates/functions/src/tests/conversion/snapshots/to_binary/query_to_binary_case_insensitive_format.snap
---
source: crates/functions/src/tests/conversion/to_binary.rs
description: "\"SELECT \n        TO_BINARY('SNOW', 'utf-8') AS utf8_lower,\n        TO_BINARY('534E4F57', 'hex') AS hex_lower,\n        TO_BINARY('U05PVw==', 'base64') AS base64_lower\""
---
Ok(
    [
        "+------------+-----------+--------------+",
        "| utf8_lower | hex_lower | base64_lower |",
        "+------------+-----------+--------------+",
        "| 534e4f57   | 534e4f57  | 534e4f57     |",
        "+------------+-----------+--------------+",
    ],
)
