crates/functions/src/tests/conversion/snapshots/to_binary/query_to_binary_default_format.snap
---
source: crates/functions/src/tests/conversion/to_binary.rs
assertion_line: 21
description: "\"SELECT TO_BINARY('SNOW') AS binary_value\""
---
"Error: External error: Failed to decode hex string: Invalid character 'S' at position 0"
