crates/functions/src/tests/conversion/snapshots/to_binary/query_to_binary_hex.snap
---
source: crates/functions/src/tests/conversion/to_binary.rs
description: "\"SELECT TO_BINARY('534E4F57', 'HEX') AS binary_value\""
---
Ok(
    [
        "+--------------+",
        "| binary_value |",
        "+--------------+",
        "| 534e4f57     |",
        "+--------------+",
    ],
)
