crates/functions/src/tests/conversion/snapshots/to_binary/query_to_binary_null.snap
---
source: crates/functions/src/tests/conversion/to_binary.rs
description: "\"SELECT TO_BINARY(NULL, 'UTF-8') AS binary_value\""
---
Ok(
    [
        "+--------------+",
        "| binary_value |",
        "+--------------+",
        "|              |",
        "+--------------+",
    ],
)
