crates/functions/src/tests/conversion/snapshots/to_binary/query_to_binary_table.snap
---
source: crates/functions/src/tests/conversion/to_binary.rs
description: "\"WITH test_data AS (\n        SELECT 'SNOW' AS s, '534E4F57' AS hex, 'U05PVw==' AS b64\n    )\n    SELECT \n        TO_BINARY(s, 'UTF-8') AS utf8_bin,\n        TO_BINARY(hex, 'HEX') AS hex_bin,\n        TO_BINARY(b64, 'BASE64') AS b64_bin\n    FROM test_data\""
---
Ok(
    [
        "+----------+----------+----------+",
        "| utf8_bin | hex_bin  | b64_bin  |",
        "+----------+----------+----------+",
        "| 534e4f57 | 534e4f57 | 534e4f57 |",
        "+----------+----------+----------+",
    ],
)
