crates/functions/src/tests/conversion/snapshots/to_binary/query_to_binary_utf8.snap
---
source: crates/functions/src/tests/conversion/to_binary.rs
description: "\"SELECT TO_BINARY('SNOW', 'UTF-8') AS binary_value\""
---
Ok(
    [
        "+--------------+",
        "| binary_value |",
        "+--------------+",
        "| 534e4f57     |",
        "+--------------+",
    ],
)
