crates/functions/src/tests/conversion/snapshots/to_binary/query_try_to_binary_invalid.snap
---
source: crates/functions/src/tests/conversion/to_binary.rs
description: "\"SELECT TRY_TO_BINARY('ZZZZ', 'HEX') AS binary_value\""
---
Ok(
    [
        "+--------------+",
        "| binary_value |",
        "+--------------+",
        "|              |",
        "+--------------+",
    ],
)
